--- a/views/customer-greetings.ejs
+++ b/views/customer-greetings.ejs
@@ -8,137 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        display: grid;
-        place-items: center;
-        height: 100vh;
-        overflow-y: auto;
-        background: #bebdbd;
-        font-family: "Open Sans", sans-serif;
-        gap: 10px;
-      }
-
-      /* Global Styles */
-
-      .template-container {
-        background-color: #ffff;
-        max-width: 600px;
-        border-radius: 10px;
-        overflow-y: auto;
-        --webkit-scrollbar-width: none;
-        padding-bottom: 20px;
-        border: 1px solid #e6e6e6;
-      }
-
-      .template-header {
-        display: grid;
-        place-items: center;
-        border-bottom: 1px solid #e6e6e6;
-        padding: 20px;
-      }
-
-      .logo-img {
-        width: 180px;
-        height: 50px;
-      }
-
-      .template-footer {
-        display: grid;
-        gap: 10px;
-        justify-items: center;
-        text-align: center;
-      }
-
-      .template-footer h2 {
-        font-weight: 700;
-        font-size: 20px;
-        background: linear-gradient(90deg, #294393, #04a4e6 100%);
-        -webkit-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-
-      .template-footer span {
-        font-size: 14px;
-        font-weight: 400;
-        color: #4c4c4c;
-        line-height: 23px;
-      }
-
-      .social-media-link {
-        display: grid;
-        grid-auto-flow: column;
-        gap: 7px;
-        justify-content: center;
-      }
-
-      .social-media-link a {
-        text-decoration: none;
-        color: #ffff;
-        border-radius: 50%;
-        width: 26px;
-        height: 26px;
-        padding: 6px;
-        background: linear-gradient(180deg, #01904d 0%, #0ce47f 100%);
-        display: grid;
-        place-items: center;
-      }
-
-      @media screen and (max-width: 768px) {
-        .template-container {
-          padding-bottom: 10px;
-        }
-
-        .template-header {
-          padding: 10px;
-        }
-
-        .logo-img {
-          width: 140px;
-          height: 40px;
-        }
-
-        .template-footer {
-          gap: 5px;
-        }
-
-        .template-footer h2 {
-          font-size: 16px;
-          font-weight: 600;
-        }
-
-        .template-footer span {
-          font-size: 12px;
-        }
-
-        .social-media-link {
-          gap: 5px;
-        }
-
-        .social-media-link a {
-          width: 20px;
-          height: 20px;
-          padding: 5px;
-        }
-        .greetings-body-info img {
-          width: 150px;
-          height: 150px;
-        }
-      }
-
-      /* Global Styles */
-
       .template-body {
         padding: 35px 30px;
         display: grid;
-
         justify-items: center;
       }
 
@@ -228,9 +102,8 @@
   </head>
   <body>
     <div class="template-container">
-      <div class="template-header">
-        <img class="logo-img" src="./assets/LogoElite.png" alt="logo" />
-      </div>
+      <%- include('./components/header.ejs') %>
+
       <div class="template-body">
         <div class="greetings-body-info">
           <img src="./assets/greetings.png" alt="greetings" />
@@ -239,9 +112,10 @@
 
         <div class="greetings">
           <p>
-            Thank you for joining <b>EliteCommerce!</b> We are excited to
-            welcome you to our community and look forward to providing you with
-            a seamless and exceptional shopping experience.
+            Thank you for joining
+            <b>EliteCommerce!</b>
+            We are excited to welcome you to our community and look forward to
+            providing you with a seamless and exceptional shopping experience.
           </p>
           <div class="greetings-info">
             <h3>Exclusive Offers:</h3>
@@ -258,32 +132,13 @@
             href="https://demo.elitecommerce.app/"
             target="_blank"
             id="visit-website-btn"
-            >Visit Elite Commerce
+          >
+            Visit Elite Commerce
           </a>
         </div>
       </div>
 
-      <div class="template-footer">
-        <h2>Need Help?</h2>
-        <span>Please Notify In Our Social Media.</span>
-        <div class="social-media-link">
-          <a href="#">
-            <img src="./assets/social-icons/LinkedInIcon.png" alt="linkedin" />
-          </a>
-          <a href="#">
-            <img src="./assets/social-icons/DiscordIcon.png" alt="discord" />
-          </a>
-          <a href="#">
-            <img src="./assets/social-icons/GithubIcon.png" alt="github" />
-          </a>
-          <a href="#">
-            <img src="./assets/social-icons/WhatsappIcon.png" alt="whatsapp" />
-          </a>
-          <a href="#">
-            <img src="./assets/social-icons/MailIcon.png" alt="mail" />
-          </a>
-        </div>
-      </div>
+      <%- include('./components/footer.ejs') %>
     </div>
   </body>
 </html>
