--- a/views/password-reset-completed.ejs
+++ b/views/password-reset-completed.ejs
@@ -50,14 +50,11 @@
   </head>
   <body>
     <div class="template-container">
-      <%- include('./components/header.ejs') %>
+      <%- include('./components/header.ejs',{logoUrl}) %>
 
       <div class="template-body">
         <div class="template-body-content">
-          <img
-            src="./assets/passwordResetSuccessfulSvg.png"
-            alt="greetings-svg"
-          />
+          <%- include('./components/heros/PassResetSuccessSvg.ejs') %>
           <h1>Password Reset Completed</h1>
           <p>
             Your password has been successfully reset. You can now log in with
