--- a/views/password-reset-otp.ejs
+++ b/views/password-reset-otp.ejs
@@ -74,11 +74,12 @@
   </head>
   <body>
     <div class="template-container">
-      <%- include('./components/header.ejs') %>
+      <%- include('./components/header.ejs',{logoUrl}) %>
 
       <div class="template-body">
         <div class="template-body-content">
-          <img src="./assets/resetPasswordOTPSvg.png" alt="greetings-svg" />
+          <%- include('./components/heros/ResetPassOTPSvg.ejs') %>
+
           <h1>Password Reset OTP</h1>
           <p>
             You recently requested to reset your password. Please use the OTP
@@ -87,10 +88,9 @@
         </div>
         <div class="reset-password-otp-info">
           <div class="otp-box">
-            <span>5</span>
-            <span>4</span>
-            <span>8</span>
-            <span>9</span>
+            <% otp.forEach(digit => { %>
+            <span><%= digit %></span>
+            <% }); %>
           </div>
           <p>
             All you have to do is copy the confirmation code and paste it to
