--- a/views/password-reset-completed.ejs
+++ b/views/password-reset-completed.ejs
@@ -54,18 +54,14 @@
 
       <div class="template-body">
         <div class="template-body-content">
-          <%- include('./components/heros/PassResetSuccessSvg.ejs') %>
+          <%- include('./components/heros/PassResetCompletedSvg.ejs') %>
           <h1>Password Reset Completed</h1>
           <p>
             Your password has been successfully reset. You can now log in with
             your new password. If you did not request this change, please
             contact support immediately.
           </p>
-          <a
-            target="_blank"
-            href="https://dashboard.elitecommerce.app/login"
-            id="access-now-btn"
-          >
+          <a target="_blank" href="<%= accessUrl %>" id="access-now-btn">
             Access Now
           </a>
         </div>
