--- a/views/admin-greetings.ejs
+++ b/views/admin-greetings.ejs
@@ -114,32 +114,32 @@
       <div class="template-body">
         <div class="template-body-content">
           <%- include('./components/heros/AdminGreetingSvg.ejs') %>
-          <span>Mr Admin</span>
-          <h1>Welcome To Elite Commerce</h1>
+          <span><%= userRole %></span>
+          <h1>Welcome To <%= shopName %></h1>
           <p>
-            The Super Admin assigns to you admin roles In Elite Commerce,
+            The Super Admin assigns to you <%= userRole %> role In <%= shopName %>,
             granting them specific permissions to manage operations efficiently.
           </p>
         </div>
         <div class="admin-info">
           <div>
             <h3>Login Email</h3>
-            <span>admin@gmail.com</span>
+            <span><%= userEmail %></span>
           </div>
           <hr style="border-top:1px solid rgb(114, 113, 113);"
           ></hr>
           <div>
             <h3>Login Password</h3>
-            <span>123456789</span>
+            <span><%= userPassword %></span>
           </div>
         </div>
         <div class="admin-login">
           <a
-            href="https://dashboard.elitecommerce.app/login"
+            href="<%= shopUrl %>"
             target="_blank"
             id="website-login-btn"
           >
-            Login Elite Commerce
+            Login <%= shopName %>
           </a>
         </div>
       </div>
