--- a/views/password-reset-otp.ejs
+++ b/views/password-reset-otp.ejs
@@ -34,7 +34,7 @@
         border: 1px solid #e6e6e6;
       }
 
-      .template-header {
+      /* .template-header {
         display: grid;
         place-items: center;
         border-bottom: 1px solid #e6e6e6;
@@ -44,7 +44,7 @@
       .logo-img {
         width: 180px;
         height: 50px;
-      }
+      } */
 
       .template-footer {
         display: grid;
