--- a/views/sign-up-verification.ejs
+++ b/views/sign-up-verification.ejs
@@ -15,16 +15,23 @@
         padding: 0;
         box-sizing: border-box;
       }
-      body {
-        display: grid;
-        height: 100vh;
-        place-items: center;
-        overflow-y: auto;
-        background: #bebdbd;
-        font-family: "Open Sans", sans-serif;
-        gap: 10px;
-      }
-      .template-container {
+    </style>
+  </head>
+  <body
+    style="
+      display: grid;
+      height: 100vh;
+      place-items: center;
+      overflow-y: auto;
+      background: #bebdbd;
+      font-family: 'Open Sans', sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    "
+  >
+    <div
+      style="
         background-color: #ffff;
         max-width: 600px;
         border-radius: 10px;
@@ -32,169 +39,64 @@
         --webkit-scrollbar-width: none;
         padding-bottom: 20px;
         border: 1px solid #e6e6e6;
-      }
-
-      .template-header {
-        display: grid;
-        place-items: center;
-        border-bottom: 1px solid #e6e6e6;
-        padding: 20px;
-      }
-
-      .logo-img {
-        width: 180px;
-        height: 50px;
-      }
-
-      .template-footer {
-        display: grid;
-        justify-items: center;
-        align-items: center;
-        text-align: center;
-        gap: 10px;
-      }
-      .template-footer h2 {
-        font-weight: 700;
-        font-size: 20px;
-        background: linear-gradient(90deg, #294393, #04a4e6 100%);
-        -webkit-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-
-      .template-footer span {
-        font-size: 14px;
-        font-weight: 400;
-        color: #4c4c4c;
-        line-height: 23px;
-      }
-      .social-media-link {
-        display: grid;
-        grid-auto-flow: column;
-        justify-content: center;
-        align-items: center;
-        gap: 7px;
-      }
-      .social-media-link a {
-        text-decoration: none;
-        color: #ffff;
-        border-radius: 50%;
-        width: 26px;
-        height: 26px;
-        padding: 6px;
-        background: linear-gradient(180deg, #01904d 0%, #0ce47f 100%);
-        display: grid;
-        place-items: center;
-      }
-
-      @media screen and (max-width: 768px) {
-        .template-container {
-          padding-bottom: 10px;
-        }
-        .template-header {
-          padding: 10px;
-        }
-        .logo-img {
-          width: 140px;
-          height: 40px;
-        }
-        .template-footer {
-          gap: 5px;
-        }
-        .template-footer h2 {
-          font-size: 16px;
-          font-weight: 600;
-        }
-        .template-footer span {
-          font-size: 12px;
-        }
-        .social-media-link {
-          gap: 5px;
-        }
-        .social-media-link a {
-          width: 20px;
-          height: 20px;
-          padding: 5px;
-        }
-      }
-
-      /* common styles ended */
-      .template-body {
-        padding: 35px 30px;
-        display: grid;
-        place-items: center;
-        gap: 30px;
-      }
-      .template-body-content {
-        display: grid;
-        place-items: center;
-        text-align: center;
-        gap: 10px;
-      }
-      .template-body-content h1 {
-        font-size: 24px;
-        font-weight: 700;
-        color: #4c4c4c;
-      }
-      .template-body-content p {
-        font-size: 16px;
-        font-weight: 400;
-        color: #4c4c4c;
-      }
-      .sign-up-otp-info {
-        display: grid;
-        place-items: center;
-        gap: 20px;
-        margin-top: 30px;
-      }
-      .otp-box {
-        width: 80%;
-        display: grid;
-        margin: 0 auto;
-        grid-template-columns: repeat(4, 1fr);
-        justify-content: center;
-        background-color: #f7f7fb;
-        gap: 10px;
-        padding: 25px 20px;
-        border-radius: 20px;
-      }
-      .otp-box span {
-        font-weight: 700;
-        font-size: 50px;
-        line-height: 68px;
-        text-align: center;
-        color: #000000;
-      }
-      .sign-up-otp-info p {
-        font-size: 16px;
-        font-weight: 400;
-        color: #4c4c4c;
-        text-align: center;
-      }
-      /* signup-temmplate-css*/
-    </style>
-  </head>
-  <body>
-    <div class="template-container">
+      "
+    >
       <%- include('./components/header.ejs',{logoUrl}) %>
 
-      <div class="template-body">
-        <div class="template-body-content">
+      <div style="padding: 35px 30px">
+        <div style="text-align: center">
           <%- include('./components/heros/SignupVerificationSvg.ejs') %>
-          <h1>Sign Up Verification Code</h1>
-          <p>
+          <h1
+            style="
+              font-size: 24px;
+              font-weight: 700;
+              color: #4c4c4c;
+              margin: 5px 0px;
+            "
+          >
+            Sign Up Verification Code
+          </h1>
+          <p style="font-size: 16px; font-weight: 400; color: #4c4c4c">
             Please enter this confirmation code in the window
             <br />
             where you started creating your account:
           </p>
         </div>
-        <div class="sign-up-otp-info">
-          <div class="otp-box">
+        <div style="margin-top: 30px">
+          <div
+            style="
+              width: 80%;
+              margin: 0 auto;
+              background-color: #f7f7fb;
+              padding: 25px 20px;
+              border-radius: 20px;
+              text-align: center;
+            "
+          >
             <% otp.forEach(digit => { %>
-            <span><%= digit %></span>
+            <span
+              style="
+                font-weight: 700;
+                font-size: 50px;
+                line-height: 68px;
+                text-align: center;
+                color: #000000;
+                text-align: center;
+                margin: 0px 20px;
+              "
+              ><%= digit %></span
+            >
             <% }); %>
           </div>
-          <p>
+          <p
+            style="
+              font-size: 16px;
+              font-weight: 400;
+              color: #4c4c4c;
+              text-align: center;
+              margin-top: 20px;
+            "
+          >
             All you have to do is copy the confirmation code and paste it to
             your form to complete the email verification process.
           </p>
